# BudgetManager

./: .gitignore  README.md
backend/: main.py  manager.db  pyproject.toml  requirements.txt  sql_app.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: categories.py  transactions.py
frontend/dashboard/: package-lock.json  package.json
frontend/dashboard/src/: App.jsx  index.css
frontend/dashboard/src/components/dashboard/: BugetTable.jsx  DashboardStats.jsx  MonthFilter.jsx  TransactionForm.jsx
frontend/dashboard/src/components/ui/: Button.jsx  Input.jsx  Select.jsx
frontend/dashboard/src/services/: categoryServices.js  transactionServices.js
